--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <meta name="Description" content="ARC Registry Counselors, Inc. provides contract staffing services to correctional facilities and hospitals in California who require assistance in locating physicians, mental health professionals, and allied/ancillary healthcare professionals">
+    <meta name="Keywords" content="California staffing services correctional facility Psychologist California Board Psychology">
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
